# CENTURION

./: .gitignore  CMakeLists.txt  README.md  install_manifest.txt
LIBS/libargparse/: argparse_example  argparse_test
SANDBOX/: .gdbinit  config_centurion_original.xml  real_experiment2_IDEAL.xml  real_experiment2_ULTRASONIC.xml  real_experiment2_ULTRASONIC_W_BAYESIAN.xml
SCRIPTS_UTILS/: copy_to_for_github.py  create_file_init.py  create_means_std_of_csv.py  run_programs.py  run_simulations.py  test_init.xml
SCRIPTS_UTILS/DATA/: ir.csv  ir_bayesian1.csv  us1.csv  us_bayesian.csv
SCRIPTS_UTILS/PROCESSING_BOIDS_VIEWER_2D/: PROCESSING_BOIDS_VIEWER_2D.pde
SCRIPTS_UTILS/PYTHON_CENTURION_VISUALIZER/: README.txt  base_visualizer.py  log_file.xml  pygame_COLORS.py  start_test_file.xml
SCRIPTS_UTILS/SANDBOX/: ir.csv
SRC/: BASIC_AVOID_ICRA_control_algorithm.cpp  BASIC_AVOID_ICRA_control_algorithm.h  OVERLORD_control_algorithm.cpp  OVERLORD_control_algorithm.h  actuator_IDEAL_TWO_WHEEL.cpp  actuator_TWO_WHEEL.cpp  actuators.cpp  actuators.h  centurion.cpp  collision_detection.cpp  collision_detection.h  control_algorithm_BASIC_AVOID_ICRA.cpp  control_algorithm_BASIC_AVOID_ICRA_W_BAYESIAN.cpp  control_algorithm_OVERLORD.cpp  control_algorithm_SIMPLE_MOVE_IN_SQUARE_AND_STOP_W_OBSTACLE.cpp  control_sensors_actuators.h  globals.h  log_file_xml.cpp  log_file_xml.h  read_xml_config_file.cpp  read_xml_config_file.h  robot_control.cpp  robot_control.h  robot_movement.cpp  robot_movement.h  sensor_IDEAL_BEAM.cpp  sensor_IR.cpp  sensor_ULTRASONIC.cpp  sensors.cpp  sensors.h  simulation.cpp  simulation.h  types.h  utils.cpp  utils.h
